--- a/index.html
+++ b/index.html
@@ -1,29 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Belajar Web GL</title>
-    </head>
-    <style>
-        * { margin: 0;padding: 0; }
-        html , body { width: 100%; height: 100%; }
-        canvas{ display: block; }
-    </style>
+<html>
 
-    <body>
-        <canvas id="glcanvas">
-            <!--tulisan ini muncul kalo browser ga support html5-->
-            Your browser doesn't appear to support the HTML5 <code>&lt;canvas&gt;</code> element.
-        </canvas>
-        <script name="shader" data-src="vertex.glsl" data-type="vertex" data-version="v1"></script>
-        <script name="shader" data-src="vertex2.glsl" data-type="vertex" data-version="v2"></script>
-        <script name="shader" data-src="vertex3.glsl" data-type="vertex" data-version="v3"></script>
-        <script name="shader" data-src="vertex4.glsl" data-type="vertex" data-version="v4"></script>
-        <script name="shader" data-src="fragment.glsl" data-type="fragment" data-version="v1"></script>
-        <script type="text/javascript" src="libs/signals.js"></script>
-        <script type="text/javascript" src="libs/glUtils.js"></script>
-        <script type="text/javascript" src="index.js"></script>
-    </body>
+<head>
+    <title>Animation Box on Three JS</title>
+    <meta http-equiv="content-type" content="text/html" charset="ISO-8859-1">
+
+    <script type="text/javascript" src="gl-matrix-min.js"></script>
+    <script type="text/javascript" src="index.js"></script>
+
+    <script id="shader-fs" type="x-shader/x-fragment">
+        precision mediump float; varying vec4 vColor; void main(void) { gl_FragColor = vColor; }
+    </script>
+
+    <script id="shader-vs" type="x-shader/x-vertex">
+        attribute vec3 aVertexPosition; attribute vec4 aVertexColor; uniform mat4 uMVMatrix; uniform mat4 uPMatrix; varying vec4 vColor; void main(void) { gl_Position = uPMatrix * uMVMatrix * vec4(aVertexPosition, 1.0); vColor = aVertexColor; }
+    </script>
+</head>
+
+<body onload="webGLStart();" style="background-color: black;">
+
+    <div align="center">
+        <canvas id="mycanvas" style="border: none" width="600" height="500"></canvas>
+    </div>
+</body>
+
 </html>
